--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,4 @@
-# requirements.txt
--Flask==2.3.2
--pandas==1.5.3
--waitress==2.1.2
-+Flask==2.3.2
-+numpy==1.24.3        # pandas 2.x 호환이 잘 되는 numpy 버전
-+pandas==2.0.3        # Python 3.12용 휠 존재, 소스 빌드 없이 빠르게 설치
-+waitress==2.1.2
+Flask==2.3.2
+numpy==1.24.3
+pandas==2.0.3
+waitress==2.1.2
